--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_URL=https://uazw9ccno9.execute-api.us-east-1.amazonaws.com/production
+API_URL=https://uazw9ccno9.execute-api.us-east-1.amazonaws.com/production/books/
 EFS_LOG_PATH=/home/ec2-user/efs
